--- a/playbooks-api/package.json
+++ b/playbooks-api/package.json
@@ -24,9 +24,13 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "@japa/runner": "^3.1.1",
     "mysql": "^2.18.1"
   },
   "autoload": {
     "App": "./app"
+  },
+  "devDependencies": {
+    "@adonisjs/vow": "^1.0.17"
   }
 }
