--- a/playbooks-api/.env.testing
+++ b/playbooks-api/.env.testing
@@ -1,3 +1,14 @@
 HOST=127.0.0.1
 PORT=4000
 NODE_ENV=testing
+APP_NAME=AdonisJs
+APP_URL=http://${HOST}:${PORT}
+CACHE_VIEWS=false
+APP_KEY=1Tw4tjBU3BFVYGamrhAmTpWVCRk5pFS2
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=
+DB_DATABASE=playbooks
+HASH_DRIVER=bcrypt
