--- a/playbooks-api/package.json
+++ b/playbooks-api/package.json
@@ -22,10 +22,13 @@
     "@adonisjs/cors": "^1.0.7",
     "@adonisjs/fold": "^4.0.9",
     "@adonisjs/framework": "^5.0.9",
+    "@adonisjs/generic-exceptions": "^3.0.1",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/validator": "^5.1.0",
     "@japa/runner": "^3.1.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "validator": "^13.11.0"
   },
   "autoload": {
     "App": "./app"
