--- a/playbooks-api/package.json
+++ b/playbooks-api/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "adonis serve --dev",
-    "test": "node ace test"
+    "format": "prettier --write",
+    "test": "node japaFile.js"
   },
   "keywords": [
     "adonisjs",
@@ -18,6 +19,7 @@
   "private": true,
   "dependencies": {
     "@adonisjs/ace": "^5.0.8",
+    "@adonisjs/assembler": "^5.9.6",
     "@adonisjs/auth": "^3.0.7",
     "@adonisjs/bodyparser": "~2.0.9",
     "@adonisjs/cors": "^1.0.7",
@@ -37,6 +39,12 @@
     "App": "./app"
   },
   "devDependencies": {
-    "@adonisjs/vow": "^1.0.17"
+    "@adonisjs/vow": "^1.0.17",
+    "execa": "^5.1.1",
+    "get-port": "^5.1.1",
+    "japa": "^4.0.0",
+    "jest": "^29.7.0",
+    "sqlite3": "^5.1.7",
+    "supertest": "^6.3.3"
   }
 }
